2007-12-10  Jean Brefort  <jean.brefort@normalesup.org>

	* include/openbabel/base.h: add missing headers, see debian bug #455170.
	* include/openbabel/data.h: ditto.
	* include/openbabel/lineend.h: ditto.
	* include/openbabel/mol.h: ditto.
	* include/openbabel/obconversion.h: ditto.
	* include/openbabel/obmolecformat.h: ditto.
	* include/openbabel/plugin.h: ditto.
	* include/openbabel/xml.h: ditto.
	* src/bitvec.cpp: ditto.
	* src/dlhandler_unix.cpp: ditto.
	* src/format.cpp: ditto.
	* src/math/spacegroup.cpp: ditto.
	* src/matrix.cpp: ditto.
	* src/residue.cpp: ditto.
	* src/tokenst.cpp: ditto.
	* tools/babel.cpp: ditto.

2007-12-07  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/dock.h, src/dock.cpp: Added docking class.

	* src/forcefield.cpp: Implemented X, Y, Z atom constraints.



2007-12-07  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/mol.cpp, include/openbabel/forcefield.h: replaced double _energy
	with vector<double> _energies.

	* src/forcefield.cpp, include/openbabel/forcefield.h: update for
	restraint code.

2007-12-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/xyzformat.cpp: Fix bogus warning about titles when
	reading past the end of the file.

	* data/element.*: Fix atom colors to match Jmol standard. (Changes
	in Fe, Co, Ni, Cu only.)

2007-12-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>
	
	* src/forcefield.cpp, include/openbabel/forcefield.h: Added some log
	functions, documentation update and bond length constraints.

2007-12-05  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, include/openbabel/forcefield.h: OBForceField now
	defines Setup() itself. It calls the needed virtual setup functions
	which FF implementations can overwrite.
	Continue work on constraints implementation.

	* src/forcefields/*: Changes for new Setup system.
	
	* include/openbabel/atom.h: Removed old Ignore/Fixed functions.

2007-12-04  Tim Vandermeersch <tim.vandermeersch@gmail.com>
